--- a/SERVER/UNIT 2/ASSIGMENT 2/Acme/GesPresta/GesPresta.csproj
+++ b/SERVER/UNIT 2/ASSIGMENT 2/Acme/GesPresta/GesPresta.csproj
@@ -67,18 +67,28 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Default.aspx" />
-    <Content Include="StyleSheet.css" />
+    <Content Include="EmployeeStyleSheet.css" />
+    <Content Include="HomeStyleSheet.css" />
+    <Content Include="Home.aspx" />
+    <Content Include="Employees.aspx" />
+    <Content Include="HeaderStyleSheet.css" />
     <Content Include="HeaderController.ascx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Default.aspx.cs">
-      <DependentUpon>Default.aspx</DependentUpon>
+    <Compile Include="Home.aspx.cs">
+      <DependentUpon>Home.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Default.aspx.designer.cs">
-      <DependentUpon>Default.aspx</DependentUpon>
+    <Compile Include="Home.aspx.designer.cs">
+      <DependentUpon>Home.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Employees.aspx.cs">
+      <DependentUpon>Employees.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Employees.aspx.designer.cs">
+      <DependentUpon>Employees.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="HeaderController.ascx.cs">
