--- a/SERVER/UNIT 5/ASSIGMENT 3/gesTienda/Tienda/Web.config
+++ b/SERVER/UNIT 5/ASSIGMENT 3/gesTienda/Tienda/Web.config
@@ -6,7 +6,7 @@
 <configuration>
   <connectionStrings>
     <add name="ConnectionString" 
-        connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Tienda.mdf;Integrated Security=True"
+        connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Tiend.mdf;Integrated Security=True"
         providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
