--- a/SERVER/UNIT 6/ASSIGMENT 1/MvcAgenda/MvcAgenda/appsettings.json
+++ b/SERVER/UNIT 6/ASSIGMENT 1/MvcAgenda/MvcAgenda/appsettings.json
@@ -1,6 +1,24 @@
+
+// ORIGINAL
+
+//{
+//  "ConnectionStrings": {
+//    "DefaultConnection": "Server=(localdb)\\MSSQL15;Database=aspnet-MvcAgenda-e4d88d97-9f8f-4965-987e-c65ea2ce259f;Trusted_Connection=True;MultipleActiveResultSets=true"
+//  },
+//  "Logging": {
+//    "LogLevel": {
+//      "Default": "Information",
+//      "Microsoft.AspNetCore": "Warning"
+//    }
+//  },
+//  "AllowedHosts": "*"
+//}
+
+// PRUEBA A QUE CAMBIEN DE LUGAR
+
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-MvcAgenda-e4d88d97-9f8f-4965-987e-c65ea2ce259f;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\MSSQL15;AttachDbFileName=|DataDirectory|\\BD\\aspnet-MvcAgenda-e4d88d97-9f8f-4965-987e-c65ea2ce259f.mdf;Database=aspnet-MvcAgenda-e4d88d97-9f8f-4965-987e-c65ea2ce259f;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
