--- a/.gitignore
+++ b/.gitignore
@@ -402,4 +402,4 @@ FodyWeavers.xsd
 /INTERFACES/GITHUB CLASSROOM
 
 #DB Migrations for Visual Studio .NET MVC 
-/SERVER/DBMIGRATIONS
+/SERVER/DBMIGRATIONS/
