--- a/.gitignore
+++ b/.gitignore
@@ -401,5 +401,5 @@ FodyWeavers.xsd
 /CLIENT/GITHUB CLASSROOM
 /INTERFACES/GITHUB CLASSROOM
 
-#DB Migrations for Visual Studio .NET MVC 
-/SERVER/DBMIGRATIONS/
+#DB Migrations for Visual Studio .NET MVC DONT IGNORE
+!/SERVER/DBMIGRATIONS/
