--- a/.gitignore
+++ b/.gitignore
@@ -402,4 +402,6 @@ FodyWeavers.xsd
 /INTERFACES/GITHUB CLASSROOM
 
 #DB Migrations for Visual Studio .NET MVC DONT IGNORE
-!/SERVER/DBMIGRATIONS/
+# MDF y LDF
+!SERVER/DBMIGRATIONS/*.mdf
+!SERVER/DBMIGRATIONS/*.ldf
