--- a/INTERFACES/.vscode/settings.json
+++ b/INTERFACES/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "livePreview.defaultPreviewPath": "/ASSIGMENT 5/grid-repaso.html"
+    "livePreview.defaultPreviewPath": "/ASSIGMENT 8/Práctica3_Grid.html"
 }
