--- a/desktop.ini
+++ b/desktop.ini
@@ -1,5 +1,5 @@
 [.ShellClassInfo]
-IconResource=C:\Users\serdiefer\Desktop\ezgif.com-apng-maker.ico,0
+IconResource=C:\Users\serdiefer\Desktop\Cosas\Memes\InglisPls.ico,0
 [ViewState]
 Mode=
 Vid=
