--- a/PROYECT/VESTIGIO PROYECT/Vestigio/Vestigio.React/package.json
+++ b/PROYECT/VESTIGIO PROYECT/Vestigio/Vestigio.React/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "vestigio.react",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,7 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.8.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
